2003-06-13  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/event-context.c (sp_event_context_private_root_handler): Removed
	desktop dialog double-click binding

	* src/widgets/icon.c (sp_icon_new_scaled): New method
	(sp_icon_new_full): Refactored static method
	(sp_icon_image_load_svg): Use scale factor

	* src/xml/repr-io.c (sp_repr_do_read): Unref node after attaching
	(sp_repr_svg_read_node): Ditto

	* src/xml/repr.c (sp_repr_document_new): Ditto

2003-06-12  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/modules/ps.c: Ported Ascii85 filter from The GIMP

2003-06-09  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/modules/kde.cpp (sp_kde_get_save_filename): New method
	(sp_kde_get_write_filename): New method
	(sp_kde_get_open_filename): Use dir/filter/title

	* src/file.c (sp_file_open_dialog): Use KDE file dialog if WITH_KDE
	(sp_file_save_dialog): Ditto
	(sp_file_import): Ditto

2003-06-05  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/print.c: Only high-level stuff

	* src/modules/gnome.c: Moved gnome print frontend here

	* src/modules/ps.*: Moved plain print frontend here

2003-05-25  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-item.h: Removed ::menu and ::knot_holder virtual methods

	* src/object-edit.c: New file, collect all knotholder methods from
	item implementations here

	* src/object-edit.h (sp_item_knot_holder): New file

	* src/object-ui.c: New file, collect all Gtk related methods from
	object implementations here

	* src/object-ui.h (sp_object_menu): New file

2003-05-24  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/print.c (sp_print_preview_document): Use ::set_preview if present

	* src/module.h: Added virtual methof for setting preview

	* src/helper/kde.cpp (sp_module_print_kde_finish): Got working
	(sp_module_print_kde_set_preview): New method

2003-05-18  Hans Breuer  <hans.breuer.org>

	* src/monostd.h : (new file) some defines and includes
	mostly to make up the WIN32 lack of unistd.h
